--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://searchmetrics.recruitee.com/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
     </a></h5> 
@@ -105,11 +109,11 @@
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
 <p><span class="badge badge-light">Adelaide</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c50f1fcd-2fac-469e-8797-d42496e6937a'>Datacom - Systems Analyst - Datacom AU</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c50f1fcd-2fac-469e-8797-d42496e6937a'>Datacom - Systems Analyst - Datacom AU</a></h5> 
 <p><span class="badge badge-light">Brisbane Sydney Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -133,7 +137,7 @@
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698250348-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698250348-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia  Paris</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -162,7 +166,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -206,7 +210,7 @@ achieve our mission to quantify user interactions with government services.</p>
 Intelligence initiative. This initiative is focused on collecting and curating the 
 wealth of?...</p>
 <hr/>
-<h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Data Analyst at Evite, Inc. in Los Angeles, CA.</p>
 <hr/>
@@ -249,7 +253,7 @@ organization?...</p>
 <p><span class="badge badge-light">North America North America Tennessee  North America</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -362,7 +366,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -406,7 +410,7 @@ traditionally?...</p>
 Zayo by providing various analyses relating to Zayo's network and geographical
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>il y a 4?jours ... Rejoignez la belle brochette de LaFourchette ! Derri?re LaFourchette, il y a une 
 ?quipe aux personnalit?s et aux talents multiples. Du commercial au geek,?...</p>
@@ -500,19 +504,13 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rydoo/jobs/4488174002'>Job Application for Procurement Data Analyst at Rydoo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rydoo/jobs/4488174002'>Job Application for Procurement Data Analyst at Rydoo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 <h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://translations.recruitee.com/l/nl/o/language-data-analyst-spanish-and-english-speakers'>
-      Language Data Analyst - Spanish and English Speakers - TransPerfect
-    </a></h5> 
-<p><span class="badge badge-light">Tempe, Verenigde Staten</span></p>
-<p>Posted on: 2019-10-24</p>
 <hr/>
 
 
